--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3446,7 +3446,7 @@ input, select, textarea {
 					flex-shrink: 0;
 					margin: 0 0 4em 0;
 					height: 100%;
-					max-height: 50vh;
+					/*max-height: 50vh;*/
 					min-height: 18em;
 					width: 100%;
 				}
