--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3445,7 +3445,7 @@ input, select, textarea {
 					-ms-flex-shrink: 0;
 					flex-shrink: 0;
 					margin: 0 0 4em 0;
-					max-height: 50vh;
+					/*max-height: 50vh;*/
 					min-height: 18em;
 					width: 100%;
 				}
@@ -3455,7 +3455,7 @@ input, select, textarea {
 		@media screen and (orientation: portrait) and (max-width: 480px) {
 
 			#banner .image {
-				max-height: 35vh;
+				/*max-height: 35vh;*/
 			}
 
 		}
