--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3436,7 +3436,6 @@ input, select, textarea {
 				}
 
 				#banner .image {
-					height: 100%;
 					-moz-flex-grow: 0;
 					-webkit-flex-grow: 0;
 					-ms-flex-grow: 0;
@@ -3446,7 +3445,7 @@ input, select, textarea {
 					-ms-flex-shrink: 0;
 					flex-shrink: 0;
 					margin: 0 0 4em 0;
-					/*max-height: 50vh;*/
+					max-height: 50vh;
 					min-height: 18em;
 					width: 100%;
 					object-fit: cover;
@@ -3458,7 +3457,7 @@ input, select, textarea {
 		@media screen and (orientation: portrait) and (max-width: 480px) {
 
 			#banner .image {
-				/*max-height: 35vh;*/
+				max-height: 35vh;
 			}
 
 		}
