--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3448,7 +3448,7 @@ input, select, textarea {
 					height: 25em;
 					max-height: 50vh;
 					min-height: 18em;
-					width: 100%;
+					width: 25em;
 				}
 
 		}
