--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3445,10 +3445,10 @@ input, select, textarea {
 					-ms-flex-shrink: 0;
 					flex-shrink: 0;
 					margin: 0 0 4em 0;
-					height: 25em;
+					height: 100%;
 					max-height: 50vh;
 					min-height: 18em;
-					width: 25em;
+					width: 100%;
 				}
 
 		}
